# pygments-soul-lexer

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  PLAN.md  PYPI_CHECKLIST.md  QUICKSTART.md  README.md  output.html  pyproject.toml  verify_lexer.py
.ai/: guidelines.md  project.md
.github/workflows/: deploy-pages.yml  lint.yml  publish.yml
docs/: SETUP.md  _config.yml  index.html  index.md
docs/examples/: basic_syntax.html  database_ops.html  oop_features.html  text_blocks.html
html_examples/: text_blocks.html
scripts/: build_docs.sh  copy_readme.sh  generate_examples.py  generate_examples.sh
soul_lexer/: __init__.py  lexer.py
tests/: __init__.py  test_jekyll_config.py  test_regression_detection.py  test_soul_lexer.py  test_token_sequence_validation.py
tests/examples/: basic_syntax.soul  database_ops.soul  oop_features.soul  text_blocks.soul
