[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pygments-soul-lexer"
version = "0.1.0"
description = "Pygments lexer for SOUL (System Online User Language), the 4GL language for Rocket Software's Model 204 database"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "nokout", email = "nokout@users.noreply.github.com"}
]
keywords = ["pygments", "lexer", "soul", "model204", "syntax-highlighting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Framework :: Pygments",

]
dependencies = [
    "pygments>=2.15.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/nokout/pygments-soul-lexer"
Repository = "https://github.com/nokout/pygments-soul-lexer"
Issues = "https://github.com/nokout/pygments-soul-lexer/issues"
Documentation = "https://github.com/nokout/pygments-soul-lexer#readme"

[project.entry-points."pygments.lexers"]
soul = "soul_lexer.lexer:SOULLexer"

[tool.hatch.build.targets.wheel]
packages = ["soul_lexer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
# Set the maximum line length to 100
line-length = 100
target-version = "py38"

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable strict linting rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "Q",   # flake8-quotes
]

# Ignore specific rules if needed
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["soul_lexer"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Use Unix-style line endings
line-ending = "lf"

# Add trailing comma to multiline structures
skip-magic-trailing-comma = false
